# Hydrogen

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt  demo.cpp
apps/assets/: BlinnPhong.glsl  GeometryPass.glsl  test.txt.asset
docs/: CMakeLists.txt  mainpage.md
hydrogen/: CMakeLists.txt
hydrogen-editor/: CMakeLists.txt  imgui.ini
hydrogen-editor/assets/Meshes/2011-aston-martin-one-77/source/: aston martin one-77.fbx
hydrogen-editor/assets/Meshes/Monkey/: monkey.fbx
hydrogen-editor/assets/Meshes/su-33-flanker-d/source/: Su-33 Flanker-D.7z
hydrogen-editor/assets/Meshes/su-33-flanker-d/source/Su-33 Flanker-D/: Su-33 Flanker-D.mtl  info.txt
hydrogen-editor/assets/Raw.glsl/: Raw.frag  Raw.vert
hydrogen-editor/cache/assets/Raw.glsl/: Raw.frag  Raw.frag.hycache  Raw.vert  Raw.vert.hycache
hydrogen-editor/include/: Panel.hpp
hydrogen-editor/include/Panels/: AssetNavigatorPanel.hpp
hydrogen-editor/src/: EditorApp.cpp
hydrogen-runtime/: CMakeLists.txt  demo.cpp
hydrogen-runtime/assets/: Raw.glsl
hydrogen/include/Hydrogen/: Hydrogen.hpp
hydrogen/include/Hydrogen/Assets/: Asset.hpp  AssetManager.hpp  MeshAsset.hpp  ShaderAsset.hpp  SpriteAsset.hpp
hydrogen/include/Hydrogen/Core/: Application.hpp  Assert.hpp  Base.hpp  Cache.hpp  Entry.hpp  Logger.hpp  Memory.hpp  Platform.hpp  Task.hpp  UUID.hpp  Window.hpp
hydrogen/include/Hydrogen/Event/: EventManager.hpp  KeyCodes.hpp
hydrogen/include/Hydrogen/Events/: EventSystem.hpp  KeyCodes.hpp
hydrogen/include/Hydrogen/Math/: Math.hpp
hydrogen/include/Hydrogen/Platform/MacOS/: MacOSEntry.hpp  MacOSWindow.hpp
hydrogen/include/Hydrogen/Platform/OpenGL/: OpenGLBuffer.hpp  OpenGLRendererAPI.hpp  OpenGLShader.hpp  OpenGLTexture.hpp
hydrogen/include/Hydrogen/Platform/Vulkan/: VulkanBuffer.hpp  VulkanCommandBuffer.hpp  VulkanContext.hpp  VulkanFence.hpp  VulkanFramebuffer.hpp  VulkanRenderDevice.hpp  VulkanRenderPass.hpp  VulkanRendererAPI.hpp  VulkanSemaphore.hpp  VulkanShader.hpp  VulkanSurfaceAttachment.hpp  VulkanSwapChain.hpp  VulkanTexture.hpp  VulkanVertexArray.hpp
hydrogen/include/Hydrogen/Platform/Windows/: WindowsEntry.hpp  WindowsWindow.hpp
hydrogen/include/Hydrogen/Renderer/: Buffer.hpp  Camera.hpp  CommandBuffer.hpp  Context.hpp  Fence.hpp  Framebuffer.hpp  RenderCommand.hpp  RenderDevice.hpp  RenderPass.hpp  RenderWindow.hpp  Renderbuffer.hpp  Renderer.hpp  RendererAPI.hpp  Semaphore.hpp  Shader.hpp  ShaderCompiler.hpp  SurfaceAttachment.hpp  SwapChain.hpp  Texture.hpp  VertexArray.hpp
hydrogen/include/Hydrogen/Scene/: Components.hpp  Entity.hpp  Scene.hpp  SceneSerialization.hpp
hydrogen/src/Assets/: AssetManager.cpp  MeshAsset.cpp  ShaderAsset.cpp  SpriteAsset.cpp
hydrogen/src/Core/: Application.cpp  Cache.cpp  Logger.cpp  Memory.cpp  Platform.cpp  Task.cpp  Window.cpp
hydrogen/src/Event/: EventManager.cpp
hydrogen/src/Events/: EventSystem.cpp
hydrogen/src/Platform/MacOS/: MacOSWindow.cpp
hydrogen/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLFramebuffer.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp
hydrogen/src/Platform/Vulkan/: VulkanBuffer.cpp  VulkanCommandBuffer.cpp  VulkanContext.cpp  VulkanFence.cpp  VulkanFramebuffer.cpp  VulkanRenderDevice.cpp  VulkanRenderPass.cpp  VulkanRendererAPI.cpp  VulkanSemaphore.cpp  VulkanShader.cpp  VulkanSurfaceAttachment.cpp  VulkanSwapChain.cpp  VulkanTexture.cpp  VulkanVertexArray.cpp
hydrogen/src/Platform/Windows/: WindowsWindow.cpp
hydrogen/src/Renderer/: Buffer.cpp  CommandBuffer.cpp  Context.cpp  Fence.cpp  Framebuffer.cpp  RenderCommand.cpp  RenderDevice.cpp  RenderPass.cpp  RenderWindow.cpp  Renderbuffer.cpp  Renderer.cpp  RendererAPI.cpp  Semaphore.cpp  Shader.cpp  ShaderCompiler.cpp  SurfaceAttachment.cpp  SwapChain.cpp  Texture.cpp  VertexArray.cpp
hydrogen/src/Scene/: Entity.cpp  Scene.cpp  SceneSerialization.cpp
include/Hydrogen/: Hydrogen.hpp
include/Hydrogen/Assets/: AssetManager.hpp
include/Hydrogen/Core/: Application.hpp  Assert.hpp  Logger.hpp  Memory.hpp  Platform.hpp  Task.hpp  UUID.hpp  Window.hpp
include/Hydrogen/Event/: EventManager.hpp
include/Hydrogen/Platform/MacOS/: MacOSWindow.hpp
include/Hydrogen/Platform/OpenGL/: OpenGLContext.hpp  OpenGLFramebuffer.hpp  OpenGLRenderbuffer.hpp  OpenGLRendererAPI.hpp  OpenGLShader.hpp  OpenGLTexture.hpp  OpenGLVertexArray.hpp
include/Hydrogen/Platform/Vulkan/: VulkanContext.hpp  VulkanFramebuffer.hpp  VulkanRenderbuffer.hpp  VulkanRendererAPI.hpp  VulkanShader.hpp
include/Hydrogen/Renderer/: Buffer.hpp  Camera.hpp  Context.hpp  Framebuffer.hpp  RenderCommand.hpp  RenderWindow.hpp  Renderbuffer.hpp  Renderer.hpp  RendererAPI.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp
include/Hydrogen/Scene/: Components.hpp  Scene.hpp
src/: CMakeLists.txt
src/Assets/: AssetManager.cpp  Manager.cpp
src/Core/: Application.cpp  Assert.cpp  Logger.cpp  Memory.cpp  Platform.cpp  Task.cpp  Window.cpp
src/Platform/MacOS/: MacOSWindow.cpp
src/Platform/OpenGL/: OpenGLContext.cpp  OpenGLFramebuffer.cpp  OpenGLRenderbuffer.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp
src/Platform/Vulkan/: VulkanBuffer.cpp  VulkanContext.cpp  VulkanRenderbuffer.cpp  VulkanRendererAPI.cpp  VulkanShader.cpp  VulkanTexture.cpp  VulkanVertexArray.cpp
src/Renderer/: Buffer.cpp  Context.cpp  Framebuffer.cpp  RenderCommand.cpp  RenderWindow.cpp  Renderbuffer.cpp  Renderer.cpp  RendererAPI.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp
src/Scene/: Scene.cpp
